syntax = "proto3";

package advanced_twitter_user_search;

option go_package = "github.com/nekoshita/advanced-twitter-user-search/server/src/interfaces/gen/advanced_twitter_user_search";

import "google/protobuf/empty.proto";

service FollowService {
  rpc FollowUser (FollowUserMessage) returns (google.protobuf.Empty) {}
  rpc UnfollowUser (FollowUserMessage) returns (google.protobuf.Empty) {}
}

message FollowUserMessage {
  string userID = 1;
}

message UnfollowUserMessage {
  string userID = 1;
}
